@@ -1,11 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- pressed --> 
-	<item android:state_pressed="true"
-           android:drawable="@drawable/enter_pnr_bg_focus" /> 
-    <!-- focused --> 
-    <item android:state_focused="true"
-           android:drawable="@drawable/enter_pnr_bg_focus" />
-     <!-- default -->
-     <item android:drawable="@drawable/enter_pnr_background" />
-</selector>
